feat: Implement Data Store with Adapter Design Pattern, fix Laporan