@@ -6,6 +6,7 @@ import lombok.Getter;
 import org.javatuples.Pair;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @EqualsAndHashCode(callSuper = true)
 @Getter
@@ -14,7 +15,7 @@ public class FixedBill extends Bill {
     public FixedBill(List<Pair<Barang, Integer>> listBarang) {
         super(listBarang.stream()
                 .map(el -> Pair.with(el.getValue0().clone(), el.getValue1()))
-                .toList());
+                .collect(Collectors.toList()));
     }
 
 }
